Adding discovery endpoint
