# pkg/api/v1/models/discovery.go
@@ -1,7 +1,15 @@
 package models
 
-import "github.com/shivanshvij/flux/pkg/sdcp"
+type DiscoveryData struct {
+	MachineName     string `json:"MachineName"`     // Machine Name
+	MachineModel    string `json:"MachineModel"`    // Machine Model
+	BrandName       string `json:"BrandName"`       // Brand Name
+	MainboardIP     string `json:"MainboardIP"`     // Motherboard IP Address
+	MainboardID     string `json:"MainboardID"`     // Motherboard ID (16-bit)
+	ProtocolVersion string `json:"ProtocolVersion"` // Protocol Version
+	FirmwareVersion string `json:"FirmwareVersion"` // Firmware Version
+}
 
 type DiscoveryResponse struct {
-	Discovered []sdcp.DiscoveryData `json:"discovered"`
+	Discovered []*DiscoveryData `json:"discovered"`
 }
